# Thesis

./: .agent-download.md  .agent-export-trigger  .dockerignore  .env.example  .gitignore  .jira-config.yml  .pre-commit-config.yaml  AGENTIC_SEARCH_INTEGRATION.md  AGENTIC_SEARCH_SUMMARY.md  AGENTS.md  AI_ANALYSIS_SETUP.md  ARTICLE_REDESIGN_SUMMARY.md  FACT_CHECK_IMPLEMENTATION.md  Log.md  NEWS_RESEARCH_AGENT.md  Project file.md  QUICK_START_AI.md  README.md  SEARCH_PAGE_REDESIGN.md  SEARCH_STRUCTURED_RESPONSE.md  Todo.MD  Todo.md  UI_IMPROVEMENTS.md  article-pagination-plan.md  docker-compose.yml  eslint.config.mjs  log.md  main.py  package-lock.json  package.json  patch.js  rewrite_grid_view.js  rewrite_grid_view_vertical.js  runlocal.sh  update_globals.js  verify.sh
.autoresearch/: results.tsv  state.json
.github/: copilot-instructions.md
.opencode-gemini/: prompt-1773279309229-vsbrue8m.txt
.serena/: project.yml
backend/: .env.example  AGENTIC_SEARCH_QUICKSTART.md  AGENTIC_SEARCH_README.md  Dockerfile  PERFORMANCE_BASELINE.md  PERFORMANCE_REPORT.md  RSS_OPTIMIZATION_NOTES.md  agentic_search.py  alembic.ini  feedparser.pyi  fix_cluster_timestamps.py  gunicorn.conf.py  init.sql  mypy.ini  news_research_agent.py  openapi.json  pytest.ini  rank_bm25.pyi  recluster_last_week.py  requirements.txt  rss_parser_rust.pyi  (+12 more)
backend/rss_parser_rust/: Cargo.toml  pyproject.toml  rustfmt.toml
backend/rss_parser_rust/src/: algorithms.rs  blindspot.rs  cleaner.rs  country_mentions.rs  feed_rank.rs  fetcher.rs  gdelt.rs  html_extract.rs  lib.rs  parser.rs  topics.rs  types.rs
(+597 files in other folders)
