[package]
name = "rss_parser_rust"
version = "0.1.0"
edition = "2021"
description = "High performance RSS ingestion pipeline for Thesis backend"
license = "MIT"

[lib]
name = "rss_parser_rust"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
feed-rs = "2.3"
futures = "0.3"
html-escape = "0.2"
once_cell = "1.19"
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py311"] }
rayon = "1.10"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
scraper = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time"] }
url = "2.5"
